// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should create a divider component 1`] = `
.c0 {
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c2 {
  width: 100%;
  border-width: 0px;
  border-left-width: 0px;
  border-bottom-width: 1px;
  border-color: #D7D7E0;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <p
      class="c1"
    >
      First Content
    </p>
    <hr
      class="c2"
    />
    <p
      class="c1"
    >
      Second Content
    </p>
  </div>
</div>
`;

exports[`<Divider /> should create a vertical divider component 1`] = `
.c0 {
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
}

.c2 {
  height: auto;
  border-width: 0px;
  border-left-width: 1px;
  border-bottom-width: 0px;
  border-color: #D7D7E0;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <p
      class="c1"
    >
      First Content
    </p>
    <hr
      class="c2"
    />
    <p
      class="c1"
    >
      Second Content
    </p>
  </div>
</div>
`;
